# ironnote

./: Cargo.toml  README.md  TODO.md
src/: button_themes.rs  calender.rs  clipboard.rs  config.rs  content_tools.rs  context_menu.rs  day_store.rs  dialog_manager.rs  dictionary.rs  file_export_window.rs  file_import_window.rs  file_picker.rs  filetools.rs  global_store.rs  highlighter.rs  history_stack.rs  keyboard_manager.rs  logbox.rs  main.rs  main_window.rs  menu_bar.rs  menu_bar_builder.rs  misc_tools.rs  month_day.rs  month_store.rs  preferences_window.rs  search_table.rs  statistics.rs  tabview.rs  task_creator_window.rs  task_id.rs  tasks.rs  template_tasks.rs  text_store.rs  upgraded_content.rs  user_preferences.rs  warning_dialog.rs  window_manager.rs  word_count.rs
src/config/: font_settings.rs  journal_pointer.rs  mod.rs  user_preferences.rs
src/content/: history_stack.rs  mod.rs  upgraded_content.rs
src/custom_widgets/: calender.rs  context_menu.rs  file_picker.rs  menu_bar.rs  menu_bar_builder.rs  mod.rs  rectangle.rs  search_table.rs  tabview.rs  task.rs
src/dialogs/: dialog_manager.rs  mod.rs  warning_dialog.rs
src/md_image/: markdown_image.rs  mod.rs
src/store/: day_store.rs  global_store.rs  mod.rs  month_store.rs
src/tasks/: event_tasks.rs  mod.rs  task_data.rs  task_manager.rs  template_tasks.rs
src/ui/: button_themes.rs  highlighter.rs  journal_theme.rs  layout.rs  mod.rs  styling.rs  ui_tools.rs
src/utils/: clipboard.rs  dictionary.rs  file_extensions.rs  logbox.rs  misc_tools.rs  mod.rs  text_tools.rs
src/windows/: main_window.rs  (+6 more)
