[package]
name = "ironnote"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.41", features = ["serde"]}
copypasta = "0.10.2"
dirs = "6.0.0"
iced = {version = "0.13.1", features = ["smol", "advanced"]}
keybinds = {version = "0.2.0", features = ["iced"]}
regex = "1.11.2"
rfd = "0.16.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
spellbook = "0.3.5"
strum = {version = "0.27.2", features = ["derive"]}
