[package]
name = "ironnote"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
chrono = {version = "0.4.41", features = ["serde"]}
dirs = "6.0.0"
iced = {version = "0.14.0", features = ["smol", "advanced"]}
keybinds = {git = "https://github.com/podzolelements/keybinds-rs.git", branch = "iced_0.14.0", features = ["iced"]}
regex = "1.11.2"
rfd = "0.17.2"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
spellbook = "0.4.0"
strum = {version = "0.28.0", features = ["derive"]}
